# minecraft-bedrock-backup-manager

./: .bumpversion.toml  .commitlintrc.json  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .yamllint  CHANGELOG.md  README.md  build.py  opencode.json  pyproject.toml  test_no_header.py  test_no_header2.py  zensical.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  docs.md  feature.md  question.md
.github/workflows/: ci.yml  dco.yml  docs.yml  release.yml  security.yml  tests.yml
.opencode/agents/: docs-writer.md
docs/: DEVELOPMENT.md  README.md  SHORT_BRANCHES.md  TESTING.md  TRUNK_BASED_DEVELOPMENT.md  index.md
docs/architecture/: dependency-injection.md  index.md  overview.md  ports-and-models.md  request-flow.md
docs/decisions/: 0001-python-now-rust-tauri-future.md  index.md
docs/development/: contributing.md  dco.md  feature-flags.md  index.md  license.md  short-branches.md  testing.md  trunk-based-development.md
docs/getting-started/: index.md  installation.md  usage.md
docs/reference/: config.md  index.md  models.md  ports.md  services.md
docs/stylesheets/: extra.css
docs/user-guide/: backup-location.md  faq.md  first-backup.md  index.md  installation.md  restore.md  settings.md  troubleshooting.md
scripts/: README.md  __init__.py  add_license_header.py  dco-check.sh  dco_check.py  validate_license_header.py
site/: 404.html  index.html  search.json  sitemap.xml
site/architecture/: index.html
site/architecture/overview/: index.html
site/architecture/ports-and-models/: index.html
site/decisions/: index.html
site/decisions/0001-python-now-rust-tauri-future/: index.html
site/development/: index.html
site/development/feature-flags/: index.html
site/development/short-branches/: index.html
site/development/testing/: index.html
site/development/trunk-based-development/: index.html
site/getting-started/: index.html
site/getting-started/installation/: index.html
site/getting-started/usage/: index.html
site/reference/: index.html
site/reference/config/: index.html
site/reference/models/: index.html
site/reference/ports/: index.html
site/reference/services/: index.html
site/user-guide/: index.html
site/user-guide/backup-location/: index.html
site/user-guide/faq/: index.html
site/user-guide/first-backup/: index.html
site/user-guide/installation/: index.html
site/user-guide/restore/: index.html
site/user-guide/settings/: index.html
site/user-guide/troubleshooting/: index.html
src/backup_manager_mvp/: __init__.py  application.py  main.py  version.json
src/backup_manager_mvp/config/: README.md  __init__.py  feature_flags.py
src/backup_manager_mvp/core/models/: __init__.py  backup_model.py  progress_model.py  world_model.py
src/backup_manager_mvp/core/ports/: __init__.py  backup_repository.py  world_repository.py
src/backup_manager_mvp/core/services/: __init__.py  backup_service.py  progress_service.py  world_service.py
src/backup_manager_mvp/infra/: __init__.py
src/backup_manager_mvp/infra/repository/: __init__.py  filesystem_backup_repository.py  filesystem_world_repository.py
src/backup_manager_mvp/models/: __init__.py  backup_model.py  progress_model.py  world_model.py
src/backup_manager_mvp/services/: backup_service.py  progress_service.py  world_service.py
src/backup_manager_mvp/ui/: __init__.py  base.py
src/backup_manager_mvp/ui/customtkinter/: __init__.py  cache.py  constants.py  customtkinter_ui.py  progress_widget.py  theme.py
src/backup_manager_mvp/ui/customtkinter/components/: __init__.py  buttons.py  dialogs.py  frames.py  labels.py
src/backup_manager_mvp/ui/customtkinter/core/: __init__.py  disclaimer.py  window.py
src/backup_manager_mvp/ui/customtkinter/handlers/: __init__.py  backup_handlers.py  navigation_handlers.py  restore_handlers.py  world_handlers.py
src/backup_manager_mvp/ui/customtkinter/loading/: __init__.py  loading_manager.py
src/backup_manager_mvp/ui/customtkinter/notifications/: __init__.py  toast_manager.py
src/backup_manager_mvp/ui/customtkinter/screens/: __init__.py  restore_confirmation_screen.py  restore_preview_screen.py  world_details_screen.py  worlds_list_screen.py
src/backup_manager_mvp/utils/: paths.py  updater.py  version.py
tests/: __init__.py  conftest.py
tests/backup/: __init__.py  conftest.py
tests/backup/integration/: __init__.py
tests/backup/unit/: __init__.py  test_backup_model.py  test_backup_progress.py  test_create_backup.py  test_list_backups.py  test_preview_backup.py  test_restore_backup.py
tests/factories/: __init__.py  backup_factory.py  world_factory.py
tests/integration/: conftest.py  test_world_discovery.py
tests/progress/: __init__.py
tests/progress/unit/: __init__.py  test_progress_model.py  test_progress_service.py
tests/ui/: __init__.py
tests/ui/unit/: __init__.py  test_progress_widget.py
tests/unit/: conftest.py
tests/unit/backup/: conftest.py  test_backup_model.py  test_criar_backup.py  test_listar_backups.py  test_progresso_backup.py  test_restaurar_backup.py
tests/unit/models/: conftest.py  test_backup_model.py  test_progress_model.py  test_world_model.py
tests/unit/progress/: test_progress_model.py  test_progress_service.py
tests/unit/services/: test_backup_preview.py  test_backup_progress_integration.py  test_backup_service.py  test_progress_service.py  test_restore_progress_integration.py  test_world_service.py  test_world_service_multiple_sources.py
tests/unit/ui/customtkinter/: test_progress_widget.py
tests/unit/ui/progress/: __init__.py  test_progress_widget.py
tests/unit/utils/: test_paths.py  test_updater.py
tests/unit/world/: conftest.py  test_descoberta_mundos.py  test_metadados_mundo.py  test_world_model.py
tests/utils/: __init__.py
tests/utils/unit/: __init__.py  test_paths.py
tests/world/: __init__.py  conftest.py
tests/world/integration/: __init__.py  conftest.py  test_world_discovery.py
tests/world/unit/: __init__.py  test_world_discovery.py  test_world_metadata.py  test_world_model.py
(+6 files in other folders)
